@@ -15,7 +15,7 @@
  */
 package io.datarouter.ratelimiter;
 
-import java.util.Arrays;
+import java.util.List;
 
 import io.datarouter.httpclient.client.DatarouterService;
 import io.datarouter.httpclient.client.DatarouterService.NoOpDatarouterService;
@@ -31,11 +31,10 @@ import io.datarouter.web.config.DatarouterWebGuiceModule;
 
 public class RateLimiterTestNgModuleFactory extends TestNgModuleFactory{
 
-	// redis
 	public static final ClientId RATE_LIMITER = new ClientId("rateLimiter", true);
 
 	public RateLimiterTestNgModuleFactory(){
-		super(Arrays.asList(
+		super(List.of(
 				new DatarouterWebGuiceModule(),
 				new RateLimiterGuiceModule()));
 	}
